fix angular deployment